add ai chat bot interface

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -6,3 +6,6 @@ VITE_SUPABASE_ANON_KEY=your_supabase_anon_key_here
 # Sentry Configuration (for production error tracking)
 # Get this from      after creating a project
 VITE_SENTRY_DSN=https://88f1242c780f4175b94d01f0cfef9c09@o4510823451328512.ingest.de.sentry.io/4510823453884496
+
+# House AI Backend URL
+VITE_AI_BASE_URL=http://localhost:8100
