--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,22 @@
+# Node
 node_modules
+npm-debug.log
+yarn-error.log
+dist
+build
+.env
+.env.local
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+venv/
+.venv/
+env/
+house-ai/.env
+house-ai/venv/
+
+# OS
+.DS_Store
+Thumbs.db
